comienzo del comprar tickets

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </nav>
 
 
-        <section class="laConferencia">
+        <section id="laConferencia" class="laConferencia">
             <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="degradado">
                     <!-- Wrapper for slides -->
@@ -97,7 +97,7 @@
 
     </header>
     <main class="main ">
-        <div class="contenedor">
+        <div id="losOradores" class="contenedor">
             <section id="cards" class="container mb-5 mt-5 cards">
                 <div class="tituloPrincipal">
                     <h2 class="tituloPrincipal_texto">CONOCE A LOS</h2>
@@ -177,7 +177,7 @@
                 </div>
             </section>
         </div>
-        <section>
+        <section id="convierteteEnOrador">
             <div class="container">
                 <div class="tituloPrincipal">
                     <h2 class="tituloPrincipal_texto">CONVIERTETE EN UN</h2>
