fix: pages comprar tickets deja de tener el espacio del carrousel

--- a/pages/comprar_tickets.html
+++ b/pages/comprar_tickets.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <header class="header">
+    <header class="header reset">
 
         <nav class="navbar navbar-expand-lg navbar-dark colorGris">
             <div class="container">
@@ -54,7 +54,7 @@
 
 
         <section class="container pt-section">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center mt-3">
                 <div class="col-lg-8 col-xl-7">
 
                     <div class="row row-cols-1 row-cols-md-3 text-center">
