--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                                 para ti. Te esperamos!
                             </p>
                             <div>
-                                <button type="button" class="transparent-button">Quiero ser orador</button>
-                                <button type="button" class="btn btn-success">Comprar tickets</button>
+                                <button type="button" class="transparent-button" id="quieroSerOrador">Quiero ser orador</button>
+                                <button type="button" class="btn btn-success" id="comprarBtn">Comprar tickets</button>
 
                             </div>
                         </div>
@@ -232,6 +232,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script>
+
+        document.getElementById("comprarBtn").addEventListener("click", function () {
+            console.log("entre")
+            window.location.href = "./pages/comprar_tickets.html";
+        });
+
+        document.getElementById("quieroSerOrador").addEventListener("click", function () {
+            window.location.href = "#convierteteEnOrador";
+        });
+
+    </script>
 
 </body>
 
