cards macheadas al select

--- a/pages/comprar_tickets.html
+++ b/pages/comprar_tickets.html
@@ -57,19 +57,19 @@
             <div class="row justify-content-center mt-3">
                 <div class="col-lg-8 col-xl-7">
                     <div class="row row-cols-1 row-cols-md-3 text-center">
-                        <div class="col">
+                        <div class="col" id="estudianteDiv">
                             <div class="card mb-4 rounded-3 shadow-sm border-primary">
                                 <div class="card-header py-3 text-white bg-primary border-primary">
                                     <h4 class="my-8 fw-normal">Estudiante</h4>
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body" >
                                     <p>Tienen un descuento</p>
                                     <h3 class="card-title pricing-card-title">80%</h3>
                                     <small class="fw-light text-muted mt-3">Presentar documentación</small>
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col" id="traineeDiv">
                             <div class="card mb-4 rounded-3 shadow-sm border-info">
                                 <div class="card-header py-3 text-white bg-info border-info">
                                     <h4 class="my-8 fw-normal">Trainee</h4>
@@ -81,7 +81,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col" id="juniorDiv">
                             <div class="card mb-4 rounded-3 shadow-sm border-warning">
                                 <div class="card-header py-3 text-white bg-warning border-warning">
                                     <h4 class="my-0 fw-normal">Junior</h4>
