--- a/pages/comprar_tickets.html
+++ b/pages/comprar_tickets.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="../index.html#losOradores">Los Oradores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html#lugarYfecha">Lugar y La Fecha</a>
+                            <a class="nav-link" href="../index.html#lugarYfecha">Lugar y Fecha</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html#convierteteEnOrador">Conviertete en Orador</a>
@@ -84,7 +84,7 @@
                         <div class="col" id="juniorDiv">
                             <div class="card mb-4 rounded-3 shadow-sm border-warning">
                                 <div class="card-header py-3 text-white bg-warning border-warning">
-                                    <h4 class="my-0 fw-normal">Junior</h4>
+                                    <h4 class="my-8 fw-normal">Junior</h4>
                                 </div>
                                 <div class="card-body">
                                     <p>Tienen un descuento</p>
@@ -176,11 +176,10 @@
             <a class="col-sm-12 col-md-1 linkFooter" href="">Privacidad</a>
             <a class="col-sm-12 col-md-1 linkFooter" href="">Estudiantes</a>
         </div>
-        <a href=""><img class="wsp" src="./assets/img/whatsapp.png" alt="what"></a>
+        <a href=""><img class="wsp" src="../assets/img/whatsapp.png" alt="what"></a>
     </footer>
 
 
-    <a href=""><img class="wsp" src="../assets/img/whatsapp.png" alt="what"></a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
