--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <a class="nav-link" href="#losOradores">Los Oradores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#lugarYfecha">Lugar y La Fecha</a>
+                            <a class="nav-link" href="#lugarYfecha">Lugar y Fecha</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#convierteteEnOrador">Conviertete en Orador</a>
@@ -227,7 +227,6 @@
     </footer>
 
 
-    <a href=""><img class="wsp" src="./assets/img/whatsapp.png" alt="what"></a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
